--- a/spring-boot-enable/pom.xml
+++ b/spring-boot-enable/pom.xml
@@ -33,6 +33,13 @@
 			<artifactId>spring-boot-test</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<!-- 自定义的 redis 的 starter -->
+		<dependency>
+			<groupId>pers.liuliang</groupId>
+			<artifactId>redis-spring-boot-starter</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
